# smallfry

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix
src/: FreeRTOSConfig.h  mfrc522.c  mfrc522.cc  mfrc522.h  mfrc522.hh  protothreads.h  rgb8.cc  rgb8.hh  rtos.hh  smallfry.c  smallfry.cc  wave.pio  ws2812.pio
